--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,8 +46,8 @@ gtag('config', '{{site.ganalytics}}');
               <li class="list-inline-item pr-4"><a href="#ppc-topics">Knowladge Area</a> </li>
               <li class="list-inline-item pr-4"><a href="#webinars">Webinars</a> </li>
               <li class="list-inline-item pr-4"><a href="#events">Events</a> </li>
-              <li class="list-inline-item pr-4"><a class="cta" href="#">Become a member</a> </li>
-              <li class="list-inline-item"><a href="#">FAQ</a> </li>
+              <li class="list-inline-item pr-4"><a class="cta"href=" {{site.baseurl}}/become-a-member">Become a member</a> </li>
+              <li class="list-inline-item"><a href="{{site.baseurl}}/faq">FAQ</a> </li>
           </ul>
       </div>
       <button id="menu-toggler" data-class="menu-active" class="hamburger d-block d-lg-none">
@@ -58,12 +58,12 @@ gtag('config', '{{site.ganalytics}}');
     </div>
     <div class="primary-menu  d-lg-none">
       <ul class="list-unstyled m-0">
-          <li class="menu-item text-center"> <a href="#">Home</a> </li>
-          <li class="menu-item text-center"><a href="#">Knowladge Area</a> </li>
-          <li class="menu-item text-center"><a href="#">Webinars</a> </li>
-          <li class="menu-item text-center"><a href="">Events</a> </li>
-          <li class="menu-item text-center"><a class="cta" href="#">Become a member</a> </li>
-          <li class="menu-item text-center"><a href="#">FAQ</a> </li>
+          <li class="menu-item text-center"> <a href="{{site.baseurl}}/">Home</a> </li>
+          <li class="menu-item text-center"><a href="#ppc-topics">Knowladge Area</a> </li>
+          <li class="menu-item text-center"><a href="#webinars">Webinars</a> </li>
+          <li class="menu-item text-center"><a href="#events">Events</a> </li>
+          <li class="menu-item text-center"><a class="cta" href=" {{site.baseurl}}/become-a-member">Become a member</a> </li>
+          <li class="menu-item text-center"><a href="{{site.baseurl}}/faq">FAQ</a> </li>
       </ul>
     </div> 
   </div>
@@ -76,7 +76,7 @@ gtag('config', '{{site.ganalytics}}');
             <h3>This learning portal is to provide the essential knowledge <br> required to build such products and platforms. </h3>
         </div>
         <div class="banner-buttons d-flex flex-row mt-4" >
-            <a class="btn-main mr-4" href="">Become a member</a>
+            <a class="btn-main mr-4" href=" {{site.baseurl}}/become-a-member">Become a member</a>
             <a class="btn-outline" href="">Learn More about PPC</a>
         </div>
     </div> 
@@ -116,29 +116,29 @@ gtag('config', '{{site.ganalytics}}');
             Copyright © 2021 SLASSCOM 
             </div>
           </div>
-          <!--Grid column-->
-  
+          <!--Grid column--> 
+
           <!--Grid column-->
           <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
             <h5 class="text-uppercase">Quick Links</h5> 
             <ul class="list-unstyled mb-0">
               <li>
-                <a href="#!" class="text-white">Home</a>
+                <a href="{{site.baseurl}}/" class="text-white">Home</a>
               </li>
               <li>
-                <a href="#!" class="text-white">About us</a>
+                <a href="#" class="text-white">About us</a>
               </li>
               <li>
-                <a href="#!" class="text-white">Knowledge areas</a>
+                <a href="#ppc-topics" class="text-white">Knowledge areas</a>
               </li>
               <li>
                 <a href="#!" class="text-white">Webinars</a>
               </li>
               <li>
-                <a href="#!" class="text-white">Events</a>
+                <a href="#events" class="text-white">Events</a>
               </li>
               <li>
-                <a href="#!" class="text-white">FAQ</a>
+                <a href="{{site.baseurl}}/faq" class="text-white">FAQ</a>
               </li>
             </ul>
           </div>
@@ -153,7 +153,7 @@ gtag('config', '{{site.ganalytics}}');
               <li>
                 Discover new ways to level up your career, build better products, and lead successful product teams with us.
               </li>
-              <a class="btn-main-sm mt-3" href="">Become a member</a>
+              <a class="btn-main-sm mt-3" href=" {{site.baseurl}}/become-a-member">Become a member</a>
               
             </ul>
           </div>
