--- a/_includes/newsletter.html
+++ b/_includes/newsletter.html
@@ -19,15 +19,11 @@
 			</div>
 
 			<h5 class="mt-40" id='events'>
-				<span>Events</span>    
+				<span> </span>    
 			</h5>
 			<div class="list-group">
 			   
-				<a href="#" class="list-group-item list-group-item-action"><h6 class="sidebar-title">Quality Focus by SLASSCOM</h6> <span class="sidebar-info">Date : April 21, 2021 Time : Nov 21, 2020</span> </a>
-				<hr>
-				<a href="#" class="list-group-item list-group-item-action"><h6 class="sidebar-title">Agile Summit  by SLASSCOM</h6> <span class="sidebar-info">Date : May 25, 2021 Time : Jan 25, 2021 </span> </a>
-				<hr>
-				<a href="#" class="list-group-item list-group-item-action"><h6 class="sidebar-title">Island of Ingenuity by SLASSCOM</h6> <span class="sidebar-info">Date : June 18, 2021 Time : Feb 18, 2021</span> </a>
+				
 			  </div>
 		</div>
 	</div>
