completed req changes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -73,11 +73,11 @@ gtag('config', '{{site.ganalytics}}');
             <h1> Welcome to ppc academy portal </h1>
         </div>
         <div class="banner-description">
-            <h3>This learning portal is to provide the essential knowledge <br> required to build such products and platforms. </h3>
+            <h3>This learning portal is to provide the essential knowledge <br> required to build products and platforms. </h3>
         </div>
         <div class="banner-buttons d-flex flex-row mt-4" >
             <a class="btn-main mr-4" href=" {{site.baseurl}}/become-a-member">Become a member</a>
-            <a class="btn-outline" href="">Learn More about PPC</a>
+            <a class="btn-outline" href="https://slasscom.lk/product-and-platform-council-ppc/">Learn More about PPC</a>
         </div>
     </div> 
     <section>
