--- a/_includes/ppc-topic-bottom-navigation.html
+++ b/_includes/ppc-topic-bottom-navigation.html
@@ -1,6 +1,6 @@
 <div class="row" id="ppc-topics">
 	<p class="ml-3">You can click on each stage to see the detailed topics to learn.</p>
-	<div class="col-md-12 d-flex flex-row pcc__topic__bottom__navigation">
+	<div class="col-md-12 d-flex flex-wrap flex-row pcc__topic__bottom__navigation">
 		
 		<a href="{{ site.baseurl }}/explore">
 			<div class="explore">
